[package]
name = "Http"
version = "0.0.1"
description = "Http Server"
repository = "https://github.com/GuilhermeWerner/Http"
license = "MIT"
edition = "2021"
publish = false

[lib]
name="Http"
crate-type = ["rlib"]
path = "Source/lib.rs"

[[bin]]
name="HttpServer"
path = "Source/main.rs"
doc = false

[dependencies]
